Solucion manual para el update manteniendo el ObjectId